Projet/istio/virtual.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-virtual
spec:
  hosts:
    - "*"
  gateways:
    - server-gateway
  http:
    - route:
        - destination:
            host: server-service
            port:
              number: 3000
